the babel related error have been fixed
- all dependencies have been updated

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,4 @@
 {
-  "presets": ["env", "react"],
-  "plugins": [
-    "babel-plugin-transform-class-properties"
-  ]
+	"presets": ["@babel/env", "@babel/react"],
+	"plugins": ["babel-plugin-transform-class-properties"]
 }
