--- a/package.json
+++ b/package.json
@@ -1,50 +1,51 @@
 {
-  "name": "codeigniter-react-boilerplate",
-  "version": "1.1.0",
-  "description": "A CodeIgniter boilerplate with React.",
-  "main": "src/app.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "dev": "webpack --mode development --watch --progress --config config/webpack.dev.js",
-    "build": "webpack --mode production --config config/webpack.prod.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/cyruzin/codeigniter-react-boilerplate.git"
-  },
-  "keywords": [
-    "codeigniter",
-    "react",
-    "php",
-    "webpack",
-    "js",
-    "boilerplate"
-  ],
-  "author": "Cyro Dubeux",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/cyruzin/codeigniter-react-boilerplate/issues"
-  },
-  "homepage": "https://github.com/cyruzin/codeigniter-react-boilerplate#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "css-loader": "^3.4.0",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-react": "^7.17.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "style-loader": "^1.1.2",
-    "webpack": "^4.41.4",
-    "webpack-cli": "^3.3.10"
-  }
+	"name": "codeigniter-react-boilerplate",
+	"version": "1.1.1",
+	"description": "A CodeIgniter boilerplate with React.",
+	"main": "src/app.js",
+	"directories": {
+		"test": "tests"
+	},
+	"scripts": {
+		"dev": "webpack --mode development --watch --progress --config config/webpack.dev.js",
+		"build": "webpack --mode production --config config/webpack.prod.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/cyruzin/codeigniter-react-boilerplate.git"
+	},
+	"keywords": [
+		"codeigniter",
+		"react",
+		"php",
+		"webpack",
+		"js",
+		"boilerplate"
+	],
+	"author": "Cyro Dubeux",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/cyruzin/codeigniter-react-boilerplate/issues"
+	},
+	"homepage": "https://github.com/cyruzin/codeigniter-react-boilerplate#readme",
+	"devDependencies": {
+		"@babel/core": "^7.9.0",
+		"@babel/preset-env": "^7.9.0",
+		"@babel/preset-react": "^7.9.4",
+		"babel-eslint": "^10.1.0",
+		"babel-loader": "^8.1.0",
+		"babel-plugin-transform-class-properties": "^6.24.1",
+		"css-loader": "^3.4.2",
+		"eslint": "^6.8.0",
+		"eslint-loader": "^4.0.0",
+		"eslint-plugin-react": "^7.19.0",
+		"mini-css-extract-plugin": "^0.9.0",
+		"optimize-css-assets-webpack-plugin": "^5.0.3",
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1",
+		"style-loader": "^1.1.3",
+		"webpack": "^4.42.1",
+		"webpack-cli": "^3.3.11"
+	},
+	"dependencies": {}
 }
