--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "codeigniter-react-boilerplate",
-	"version": "1.1.1",
+	"version": "1.1.2",
 	"description": "A CodeIgniter boilerplate with React.",
 	"main": "src/app.js",
 	"directories": {
@@ -29,23 +29,24 @@
 	},
 	"homepage": "https://github.com/cyruzin/codeigniter-react-boilerplate#readme",
 	"devDependencies": {
-		"@babel/core": "^7.9.0",
-		"@babel/preset-env": "^7.9.0",
-		"@babel/preset-react": "^7.9.4",
+		"@babel/core": "^7.10.4",
+		"@babel/preset-env": "^7.10.4",
+		"@babel/preset-react": "^7.10.4",
 		"babel-eslint": "^10.1.0",
 		"babel-loader": "^8.1.0",
 		"babel-plugin-transform-class-properties": "^6.24.1",
-		"css-loader": "^3.4.2",
-		"eslint": "^6.8.0",
-		"eslint-loader": "^4.0.0",
-		"eslint-plugin-react": "^7.19.0",
+		"css-loader": "^3.6.0",
+		"eslint": "^7.3.1",
+		"eslint-loader": "^4.0.2",
+		"eslint-plugin-react": "^7.20.2",
 		"mini-css-extract-plugin": "^0.9.0",
 		"optimize-css-assets-webpack-plugin": "^5.0.3",
-		"react": "^16.13.1",
-		"react-dom": "^16.13.1",
-		"style-loader": "^1.1.3",
-		"webpack": "^4.42.1",
-		"webpack-cli": "^3.3.11"
+		"style-loader": "^1.2.1",
+		"webpack": "^4.43.0",
+		"webpack-cli": "^3.3.12"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"react": "^16.13.1",
+		"react-dom": "^16.13.1"
+	}
 }
